# macbot

./: Makefile  Makefile.in  README.md  config.status  configure  configure.in
conf/: README  parallax.conf  targets.conf
include/: Exception.hpp  TargetMgr.hpp  VoiceMgr.hpp
lib/: servo_sim.lib  v4l_driver.lib
src/: Makefile  Makefile.in
src/CORE/: ._IhmMgr.cpp  ._IhmMgr.hpp  ._ServoMgr.cpp  ._ServoMgr.hpp  ._macbot.cpp  CamMgr.cpp  CamMgr.hpp  Exception.cpp  IhmMgr.cpp  IhmMgr.hpp  Makefile  Makefile.in  MotionDetect.cpp  MotionDetect.hpp  ServoMgr.cpp  ServoMgr.hpp  TargetMgr.cpp  VoiceMgr.cpp  macbot.cpp
src/client/: Makefile  Makefile.in  client_macbot.cpp
src/drivers/: ._Makefile.in  Makefile  Makefile.in
src/drivers/parallax/: ._Makefile.in  ._driver_parallax.cpp  ._parallax.conf  Makefile  Makefile.in  SerialPort.h  SerialStreamBuf.cpp  SerialStreamBuf.h  driver_parallax  driver_parallax.cpp  parallax.conf
src/drivers/servos_sim/: ._Makefile.in  ._parallax.conf  Makefile  Makefile.in  servo_sim.cpp
src/drivers/v4l/: ._Makefile.in  Makefile  Makefile.in  v4l_driver.cpp
